# sm-gui

./: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
examples/: annotator.ipynb
examples/tables/: table_02.links.tsv
sm_widgets/models/: __init__.py  entity.py  ontology.py  table.py
sm_widgets/services/: search.py
sm_widgets/widgets/: base.py  foldable_list.py  slider.py  sm_visualizer.py
sm_widgets/widgets/annotator/: __init__.py  annotator.py  assistant.py  session.py
sm_widgets_integration/: common.py  grams.py  wikidata.py  with_grams.py
webapps/annotator/: package.json
webapps/annotator/src/: replayDebugData.ts
webapps/foldable_list/: package.json
webapps/slider/: package-lock.json  package.json
