[tool.poetry]
name = "sm-widgets"
version = "0.1.13"
description = ""
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"
packages = [
    { include = "sm_widgets" },
    { include = "sm_widgets_integration" }
]
include = [
]

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch = "^7.12.1"
fuzzywuzzy = "^0.18.0"
ipycallback = "^0.2.5"
requests = "^2.26.0"
tqdm = "^4.60.0"
loguru = "^0.5.3"
orjson = "^3.6.4"
python-slugify = "^5.0.2"
kgdata = "^1.5.0"
sem-desc = "^1.2.5"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
integration = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
