[tool.poetry]
name = "sm-widgets"
version = "0.1.15"
description = ""
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"
packages = [
    { include = "sm_widgets" },
    { include = "sm_widgets_integration" }
]
include = [
]

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch = "^7.12.1"
fuzzywuzzy = "^0.18.0"
ipycallback = "^0.2.5"
requests = "^2.28.0"
tqdm = "^4.64.0"
loguru = ">=0.6.0"
orjson = "^3.6.8"
python-slugify = "^5.0.2"
kgdata = "^2.3.1"
sem-desc = "^3.5.2"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
integration = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
